--- a/index.html
+++ b/index.html
@@ -71,7 +71,11 @@
             <div class="img-container-1">
               <div class="content-1-background-img"></div>
             </div>
-            <img src="images/image-mockups.png" class="content-1-img" />
+            <img
+              src="images/image-mockups.png"
+              class="content-1-img"
+              alt="phones-mockups"
+            />
           </div>
         </div>
       </section>
@@ -86,7 +90,11 @@
 
         <div class="section-2-content-wrapper">
           <div class="content-2">
-            <img src="images/icon-online.svg" class="content-2-img" />
+            <img
+              src="images/icon-online.svg"
+              class="content-2-img"
+              alt="online banking image"
+            />
             <h3 class="margin">Online Banking</h3>
             <p class="section-2-content-text">
               Our modern web and mobile applications allow you to keep track of
@@ -94,7 +102,11 @@
             </p>
           </div>
           <div class="content-2">
-            <img src="images/icon-budgeting.svg" class="content-2-img" />
+            <img
+              src="images/icon-budgeting.svg"
+              class="content-2-img"
+              alt="budgeting image"
+            />
             <h3 class="margin">Simple Budgeting</h3>
             <p class="section-2-content-text">
               See exactly where your money goes each month. Receive
@@ -102,7 +114,11 @@
             </p>
           </div>
           <div class="content-2">
-            <img src="images/icon-onboarding.svg" class="content-2-img" />
+            <img
+              src="images/icon-onboarding.svg"
+              class="content-2-img"
+              alt="onboarding image"
+            />
             <h3 class="margin">Fast Onboarding</h3>
             <p class="section-2-content-text">
               We don’t do branches. Open your account in minutes online and
@@ -110,7 +126,11 @@
             </p>
           </div>
           <div class="content-2 content-2-last">
-            <img src="images/icon-api.svg" class="content-2-img" />
+            <img
+              src="images/icon-api.svg"
+              class="content-2-img"
+              alt="open online image"
+            />
             <h3 class="margin">Open API</h3>
             <p class="section-2-content-text">
               Manage your savings, investments, pension, and much more from one
@@ -126,7 +146,7 @@
         <h2 class="content-3-title">Latest Articles</h2>
         <div class="card-wrapper-3">
           <div class="card">
-            <img src="images/image-currency.jpg" />
+            <img src="images/image-currency.jpg" alt="currency image" />
             <div class="card-content">
               <p class="card-author text">By Claire Robinson</p>
               <p class="card-title">
@@ -139,7 +159,7 @@
             </div>
           </div>
           <div class="card">
-            <img src="images/image-restaurant.jpg" />
+            <img src="images/image-restaurant.jpg" alt="restaurant image" />
             <div class="card-content">
               <p class="card-author text">By Wilson Hutton</p>
               <p class="card-title">
@@ -152,7 +172,7 @@
             </div>
           </div>
           <div class="card">
-            <img src="images/image-plane.jpg" />
+            <img src="images/image-plane.jpg" alt="plane image" />
             <div class="card-content">
               <p class="card-author text">By Wilson Hutton</p>
               <p class="card-title">Take your Easybank card wherever you go</p>
@@ -164,7 +184,7 @@
             </div>
           </div>
           <div class="card card-4">
-            <img src="images/image-confetti.jpg" />
+            <img src="images/image-confetti.jpg" alt="confetti image" />
             <div class="card-content">
               <p class="card-author text">By Claire</p>
               <p class="card-title">
