--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
       <!-- Section 1 -->
 
-      <section class="content-container-1" id="home">
+      <div class="content-container-1" id="home">
         <div class="content-left-1">
           <div class="text-container-1">
             <h1 class="text-title-1">Next generation digital banking</h1>
@@ -78,10 +78,10 @@
             />
           </div>
         </div>
-      </section>
+      </div>
       <!-- End of Section 1 -->
       <!-- Section 2 -->
-      <section class="section-2" id="about">
+      <div class="section-2" id="about">
         <h2 class="section-2-heading">Why choose Easybank?</h2>
         <p class="text section-2-text">
           We leverage Open Banking to turn your bank account into your financial
@@ -138,11 +138,11 @@
             </p>
           </div>
         </div>
-      </section>
+      </div>
       <!-- End of Section 2 -->
 
       <!-- Section 3 -->
-      <section class="content-container-3">
+      <div class="content-container-3">
         <h2 class="content-3-title">Latest Articles</h2>
         <div class="card-wrapper-3">
           <div class="card">
@@ -198,7 +198,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </div>
       <!-- End of Section 3 -->
 
       <!-- Footer -->
@@ -208,11 +208,21 @@
             ><img src="images/logo.svg" alt="easybank logo" class="footer-logo"
           /></a>
           <div class="footer-social-container">
-            <a href="#"><img src="images/icon-facebook.svg" /></a>
-            <a href="#"><img src="images/icon-youtube.svg" /></a>
-            <a href="#"><img src="images/icon-twitter.svg" /></a>
-            <a href="#"><img src="images/icon-pinterest.svg" /></a>
-            <a href="#"><img src="images/icon-instagram.svg" /></a>
+            <a href="#"
+              ><img src="images/icon-facebook.svg" alt="facebook logo"
+            /></a>
+            <a href="#"
+              ><img src="images/icon-youtube.svg" alt="youtube logo"
+            /></a>
+            <a href="#"
+              ><img src="images/icon-twitter.svg" alt="twitter logo"
+            /></a>
+            <a href="#"
+              ><img src="images/icon-pinterest.svg" alt="pinterest logo"
+            /></a>
+            <a href="#"
+              ><img src="images/icon-instagram.svg" alt="instagram logo"
+            /></a>
           </div>
         </div>
 
