--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="container">
       <!-- Navbar -->
-      <div class="nav-bar-container">
+      <nav class="nav-bar-container">
         <img src="images/logo.svg" alt="easybank logo" class="logo" />
         <div class="nav-link-container">
           <a href="#home" class="nav-link">Home</a>
@@ -35,7 +35,7 @@
           <div class="line line-3"></div>
         </div>
         <!-- End of Hamburger Menu -->
-      </div>
+      </nav>
       <!-- End of Navbar -->
 
       <!-- Modal Menu -->
@@ -202,7 +202,7 @@
       <!-- End of Section 3 -->
 
       <!-- Footer -->
-      <div class="footer" id="footer">
+      <footer class="footer" id="footer">
         <div class="footer-container-1">
           <a href="#home"
             ><img src="images/logo.svg" alt="easybank logo" class="footer-logo"
@@ -244,7 +244,7 @@
         </div>
       </div>
       <!-- End of Footer -->
-    </div>
+    </footer>
     <!-- end of container -->
 
     <div class="attribution">
