--- a/index.html
+++ b/index.html
@@ -51,162 +51,164 @@
       <!-- End of Modal Menu -->
 
       <!-- Section 1 -->
-
-      <div class="content-container-1" id="home">
-        <div class="content-left-1">
-          <div class="text-container-1">
-            <h1 class="text-title-1">Next generation digital banking</h1>
-            <p class="text text-1">
-              Take your financial life online. Your Easybank account will be a
-              one-stop-shop for spending, saving, budgeting, investing, and much
-              more.
-            </p>
-            <div class="button-container-1">
-              <button class="btn">Request Invite</button>
+      <main>
+        <div class="content-container-1" id="home">
+          <div class="content-left-1">
+            <div class="text-container-1">
+              <h1 class="text-title-1">Next generation digital banking</h1>
+              <p class="text text-1">
+                Take your financial life online. Your Easybank account will be a
+                one-stop-shop for spending, saving, budgeting, investing, and much
+                more.
+              </p>
+              <div class="button-container-1">
+                <button class="btn">Request Invite</button>
+              </div>
+            </div>
+          </div>
+          <div class="content-right-1">
+            <div class="content-right-wrapper">
+              <div class="img-container-1">
+                <div class="content-1-background-img"></div>
+              </div>
+              <img
+                src="images/image-mockups.png"
+                class="content-1-img"
+                alt="phones-mockups"
+              />
             </div>
           </div>
         </div>
-        <div class="content-right-1">
-          <div class="content-right-wrapper">
-            <div class="img-container-1">
-              <div class="content-1-background-img"></div>
-            </div>
-            <img
-              src="images/image-mockups.png"
-              class="content-1-img"
-              alt="phones-mockups"
-            />
-          </div>
-        </div>
-      </div>
-      <!-- End of Section 1 -->
-      <!-- Section 2 -->
-      <div class="section-2" id="about">
-        <h2 class="section-2-heading">Why choose Easybank?</h2>
-        <p class="text section-2-text">
-          We leverage Open Banking to turn your bank account into your financial
-          hub. Control your finances like never before.
-        </p>
-
-        <div class="section-2-content-wrapper">
-          <div class="content-2">
-            <img
-              src="images/icon-online.svg"
-              class="content-2-img"
-              alt="online banking image"
-            />
-            <h3 class="margin">Online Banking</h3>
-            <p class="section-2-content-text">
-              Our modern web and mobile applications allow you to keep track of
-              your finances wherever you are in the world.
-            </p>
-          </div>
-          <div class="content-2">
-            <img
-              src="images/icon-budgeting.svg"
-              class="content-2-img"
-              alt="budgeting image"
-            />
-            <h3 class="margin">Simple Budgeting</h3>
-            <p class="section-2-content-text">
-              See exactly where your money goes each month. Receive
-              notifications when you’re close to hitting your limits.
-            </p>
-          </div>
-          <div class="content-2">
-            <img
-              src="images/icon-onboarding.svg"
-              class="content-2-img"
-              alt="onboarding image"
-            />
-            <h3 class="margin">Fast Onboarding</h3>
-            <p class="section-2-content-text">
-              We don’t do branches. Open your account in minutes online and
-              start taking control of your finances right away.
-            </p>
-          </div>
-          <div class="content-2 content-2-last">
-            <img
-              src="images/icon-api.svg"
-              class="content-2-img"
-              alt="open online image"
-            />
-            <h3 class="margin">Open API</h3>
-            <p class="section-2-content-text">
-              Manage your savings, investments, pension, and much more from one
-              account. Tracking your money has never been easier.
-            </p>
-          </div>
-        </div>
-      </div>
-      <!-- End of Section 2 -->
-
-      <!-- Section 3 -->
-      <div class="content-container-3">
-        <h2 class="content-3-title">Latest Articles</h2>
-        <div class="card-wrapper-3">
-          <div class="card">
-            <img src="images/image-currency.jpg" alt="currency image" />
-            <div class="card-content">
-              <p class="card-author text">By Claire Robinson</p>
-              <p class="card-title">
-                Receive money in any currency with no fees
-              </p>
-              <p class="card-text text">
-                The world is getting smaller and we’re becoming more mobile. So
-                why should you be forced to only receive money in a single...
+        <!-- End of Section 1 -->
+        <!-- Section 2 -->
+        <div class="section-2" id="about">
+          <h2 class="section-2-heading">Why choose Easybank?</h2>
+          <p class="text section-2-text">
+            We leverage Open Banking to turn your bank account into your financial
+            hub. Control your finances like never before.
+          </p>
+  
+          <div class="section-2-content-wrapper">
+            <div class="content-2">
+              <img
+                src="images/icon-online.svg"
+                class="content-2-img"
+                alt="online banking image"
+              />
+              <h3 class="margin">Online Banking</h3>
+              <p class="section-2-content-text">
+                Our modern web and mobile applications allow you to keep track of
+                your finances wherever you are in the world.
               </p>
             </div>
-          </div>
-          <div class="card">
-            <img src="images/image-restaurant.jpg" alt="restaurant image" />
-            <div class="card-content">
-              <p class="card-author text">By Wilson Hutton</p>
-              <p class="card-title">
-                Treat yourself without worrying about money
-              </p>
-              <p class="card-text text">
-                Our simple budgeting feature allows you to separate out your
-                spending and set realistic limits each month. That means you...
-              </p>
-            </div>
-          </div>
-          <div class="card">
-            <img src="images/image-plane.jpg" alt="plane image" />
-            <div class="card-content">
-              <p class="card-author text">By Wilson Hutton</p>
-              <p class="card-title">Take your Easybank card wherever you go</p>
-              <p class="card-text text">
-                We want you to enjoy your travels. This is why we don’t charge
-                any fees on purchases while you’re abroad. We’ll even show
-                you...
+            <div class="content-2">
+              <img
+                src="images/icon-budgeting.svg"
+                class="content-2-img"
+                alt="budgeting image"
+              />
+              <h3 class="margin">Simple Budgeting</h3>
+              <p class="section-2-content-text">
+                See exactly where your money goes each month. Receive
+                notifications when you’re close to hitting your limits.
               </p>
             </div>
-          </div>
-          <div class="card card-4">
-            <img src="images/image-confetti.jpg" alt="confetti image" />
-            <div class="card-content">
-              <p class="card-author text">By Claire</p>
-              <p class="card-title">
-                Robinson Our invite-only Beta accounts are now live!
+            <div class="content-2">
+              <img
+                src="images/icon-onboarding.svg"
+                class="content-2-img"
+                alt="onboarding image"
+              />
+              <h3 class="margin">Fast Onboarding</h3>
+              <p class="section-2-content-text">
+                We don’t do branches. Open your account in minutes online and
+                start taking control of your finances right away.
               </p>
-              <p class="card-text text">
-                After a lot of hard work by the whole team, we’re excited to
-                launch our closed beta. It’s easy to request an invite through
-                the site...
+            </div>
+            <div class="content-2 content-2-last">
+              <img
+                src="images/icon-api.svg"
+                class="content-2-img"
+                alt="open online image"
+              />
+              <h3 class="margin">Open API</h3>
+              <p class="section-2-content-text">
+                Manage your savings, investments, pension, and much more from one
+                account. Tracking your money has never been easier.
               </p>
             </div>
           </div>
         </div>
-      </div>
-      <!-- End of Section 3 -->
-
+        <!-- End of Section 2 -->
+  
+        <!-- Section 3 -->
+        <div class="content-container-3">
+          <h2 class="content-3-title">Latest Articles</h2>
+          <div class="card-wrapper-3">
+            <div class="card">
+              <img src="images/image-currency.jpg" alt="currency image" />
+              <div class="card-content">
+                <p class="card-author text">By Claire Robinson</p>
+                <p class="card-title">
+                  Receive money in any currency with no fees
+                </p>
+                <p class="card-text text">
+                  The world is getting smaller and we’re becoming more mobile. So
+                  why should you be forced to only receive money in a single...
+                </p>
+              </div>
+            </div>
+            <div class="card">
+              <img src="images/image-restaurant.jpg" alt="restaurant image" />
+              <div class="card-content">
+                <p class="card-author text">By Wilson Hutton</p>
+                <p class="card-title">
+                  Treat yourself without worrying about money
+                </p>
+                <p class="card-text text">
+                  Our simple budgeting feature allows you to separate out your
+                  spending and set realistic limits each month. That means you...
+                </p>
+              </div>
+            </div>
+            <div class="card">
+              <img src="images/image-plane.jpg" alt="plane image" />
+              <div class="card-content">
+                <p class="card-author text">By Wilson Hutton</p>
+                <p class="card-title">Take your Easybank card wherever you go</p>
+                <p class="card-text text">
+                  We want you to enjoy your travels. This is why we don’t charge
+                  any fees on purchases while you’re abroad. We’ll even show
+                  you...
+                </p>
+              </div>
+            </div>
+            <div class="card card-4">
+              <img src="images/image-confetti.jpg" alt="confetti image" />
+              <div class="card-content">
+                <p class="card-author text">By Claire</p>
+                <p class="card-title">
+                  Robinson Our invite-only Beta accounts are now live!
+                </p>
+                <p class="card-text text">
+                  After a lot of hard work by the whole team, we’re excited to
+                  launch our closed beta. It’s easy to request an invite through
+                  the site...
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- End of Section 3 -->
+  
+      </main>
+      
       <!-- Footer -->
       <footer class="footer" id="footer">
         <div class="footer-container-1">
-          <a href="#home"
-            ><img src="images/logo.svg" alt="easybank logo" class="footer-logo"
-          /></a>
+          
+         <img src="images/logo-footer.svg" alt="easybank logo" class="footer-logo"
+          />
           <div class="footer-social-container">
             <a href="#"
               ><img src="images/icon-facebook.svg" alt="facebook logo"
